[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
md5 = "0.7.0"
rand = "0.8.5"
uuid = {version = "1.1.1", features = ["v4","fast-rng","macro-diagnostics"]}
tokio = {version = "1.19.2", features = ["macros","rt-multi-thread"] }
zstd = "0.11.2+zstd.1.5.2"
